Phantom-src/log/error.log

Traceback (most recent call last):
  File "phantom.py", line 16, in main
    main.start()
  File "src/main.py", line 415, in start
    actions.call(config.action, action_kwargs)
  File "src/main.py", line 116, in call
    func(**kwargs)
  File "src/main.py", line 123, in main
    from Ui import UiServer
  File "/usr/local/lib/python2.7/dist-packages/gevent-1.1.1-py2.7-linux-x86_64.egg/gevent/builtins.py", line 93, in __import__
    result = _import(*args, **kwargs)
  File "src/Ui/__init__.py", line 1, in <module>
    from UiServer import UiServer
  File "/usr/local/lib/python2.7/dist-packages/gevent-1.1.1-py2.7-linux-x86_64.egg/gevent/builtins.py", line 93, in __import__
    result = _import(*args, **kwargs)
  File "src/Ui/UiServer.py", line 16, in <module>
    import Phantom_Ui
  File "/usr/local/lib/python2.7/dist-packages/gevent-1.1.1-py2.7-linux-x86_64.egg/gevent/builtins.py", line 93, in __import__
    result = _import(*args, **kwargs)
ImportError: No module named Phantom_Ui
Traceback (most recent call last):
  File "phantom.py", line 16, in main
    main.start()
  File "src/main.py", line 415, in start
    actions.call(config.action, action_kwargs)
  File "src/main.py", line 116, in call
    func(**kwargs)
  File "src/main.py", line 123, in main
    from Ui import UiServer
  File "/usr/local/lib/python2.7/dist-packages/gevent-1.1.1-py2.7-linux-x86_64.egg/gevent/builtins.py", line 93, in __import__
    result = _import(*args, **kwargs)
  File "src/Ui/__init__.py", line 1, in <module>
    from UiServer import UiServer
  File "/usr/local/lib/python2.7/dist-packages/gevent-1.1.1-py2.7-linux-x86_64.egg/gevent/builtins.py", line 93, in __import__
    result = _import(*args, **kwargs)
  File "src/Ui/UiServer.py", line 16, in <module>
    from Phantom import Phantom_Ui
  File "/usr/local/lib/python2.7/dist-packages/gevent-1.1.1-py2.7-linux-x86_64.egg/gevent/builtins.py", line 93, in __import__
    result = _import(*args, **kwargs)
  File "src/Phantom/Phantom_Ui.py", line 286
    def verify_wallet_addr(self, self.addr):
                                     ^
SyntaxError: invalid syntax
